--- a/template/redirect.html
+++ b/template/redirect.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>URL Shortener service</title>
         <script>
-            window.location.replace("@URL@");
+            window.location.replace(window.atob("@URL@"));
         </script>
     </head>
     <body>
